@@ -175,11 +175,6 @@ like B<basesystem> dependencies).
 Same as B<--prozilla-options> for urpmi, urpmq or urpmi.addmedia.
 Additional options to pass to B<prozilla> when downloading files.
 
-=item B<repackage>
-
-Same as specifying B<--repackage> for urpmi. Disabled by default.
-Ignored when it's set globally by urpmi.recover.
-
 =item B<resume>
 
 Same as specifying B<--resume> for urpmi. Resume transfer of partially-downloaded files.
