@@ -69,16 +69,6 @@ urpmi (currently, urpmi-parallel-ka-run or urpmi-parallel-ssh are
 available) and which machines should be updated. This alias is defined in
 the file F</etc/urpmi/parallel.cfg> as described below.
 
-=item B<--repackage>
-
-Save previous state of upgraded packages; in other words, save the old
-rpms (usually in F</var/spool/repackage>, but you can override this with
-an rpm macro.) This is equivalent to providing the B<--repackage> flag to
-rpm.
-
-If you want to use the repackage/rollback functionality of rpm, you should
-check out the C<urpmi.recover> tool.
-
 =item B<--root> I<directory>
 
 Use the file system tree rooted for rpm install. All operations and
