@@ -45,7 +45,6 @@ sub usage() {
 ") . N("  --test         - verify if the removal can be achieved correctly.
 ") . N("  --force        - force invocation even if some packages do not exist.
 ") . N("  --parallel     - distributed urpmi across machines of alias.
-") . N("  --repackage    - Re-package the files before erasing
 ") . N("  --root         - use another root for rpm removal.
 ") . N("  --urpmi-root   - use another root for urpmi db & rpm installation.
 ") . N("  --justdb       - update only the rpm db, not the filesystem.
