@@ -135,7 +135,6 @@ sub usage () {
 ") . N("  --ignorearch   - allow to install rpms for unmatched architectures.
 ") . N("  --noscripts    - do not execute package scriptlet(s)
 ") . N("  --replacefiles - ignore file conflicts
-") . N("  --repackage    - Re-package the files before erasing
 ") . N("  --skip         - packages which installation should be skipped
 ") . N("  --prefer       - packages which should be preferred
 ") . N("  --more-choices - when several packages are found, propose more choices
