@@ -1,5 +1,6 @@
 - drop again urpmi.recover 
   (no more possible since rpm 4.6 which doesn't handle --repackage)
+- drop --repackage option (non working since 2009)
 - library:
   o enhanced doc
 
